// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates a schema 1`] = `
Object {
  "code": "export function RawUsers<Result = RawUser[]>(
  connection: ConnectionOrTransaction
) {
  return connection<RawUser, Result>(\\"user\\");
};

export function RawUserAccounts<Result = RawUserAccount[]>(
  connection: ConnectionOrTransaction
) {
  return connection<RawUserAccount, Result>(\\"user_account\\");
};

",
  "testCode": "",
}
`;

exports[`generates test code 1`] = `
Object {
  "code": "export function RawUsers<Result = RawUser[]>(
  connection: ConnectionOrTransaction
) {
  return connection<RawUser, Result>(\\"user\\");
};

export function RawUserAccounts<Result = RawUserAccount[]>(
  connection: ConnectionOrTransaction
) {
  return connection<RawUserAccount, Result>(\\"user_account\\");
};

",
  "testCode": "import { RawUsers } from \\"./generated.ts\\"

describe(\\"RawUsers\\", () => {
  it(\\"doesn't throw\\", () => {
    expect(() => RawUsers(connection)).not.toThrow();
  });
});

import { RawUserAccounts } from \\"./generated.ts\\"

describe(\\"RawUserAccounts\\", () => {
  it(\\"doesn't throw\\", () => {
    expect(() => RawUserAccounts(connection)).not.toThrow();
  });
});

",
}
`;
